# atlassian-forms-submitter-sdk

./: .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  setup.cfg
.github/workflows/: deploy.yml
atlassianforms/: client.py  manager.py
atlassianforms/form/: manager.py  parser.py
atlassianforms/models/: response.py
atlassianforms/validators/: field.py
docs/: CHANGELOG.md  README.md  gen_ref_pages.py
requirements/: all.txt  build.txt
tests/: test_client.py  test_field_validator.py  test_form_manager.py  test_form_parser.py  test_response.py  test_service_desk_manager.py
